[package]
name = "chip8"
version = "0.1.0"
authors = ["Sergey Yelin <elinsn@gmail.com>"]
edition = "2018"
license-file = "LICENSE"

[dependencies]
pixels = "0.1.0"
rand = "0.7.3"
winit_input_helper = "0.7.0"
winit = "0.22.2"

# Workaround for build error on macOS
# Remove this when `gfx-backend-metal` is fixed
# See: https://github.com/gfx-rs/gfx/pull/3311
[target.'cfg(target_os = "macos")'.dependencies]
metal = "=0.18.0"
